# dCrowd

./: Cargo.toml  README.md  dfx.json  gen_icrc7wasm.sh  package-lock.json  package.json
src/factory/: Cargo.toml
src/factory/src/: lib.rs  memory.rs
src/factory/src/common/: guards.rs
src/icrc7/: Cargo.toml  icrc7.did
src/icrc7/src/: cycles.rs  ext_query_method.rs  ext_types.rs  ext_update_method.rs  guards.rs  icrc37_query_method.rs  icrc3_query_method.rs  icrc7_types.rs  init_method.rs  query_method.rs  state.rs  update_method.rs
src/icrc7_backend/: Cargo.toml  icrc7_backend.did
src/icrc7_backend/src/: candid_file_generator.rs  cycles.rs  ext_query_method.rs  ext_update_method.rs  query_method.rs  update_method.rs
src/marketplace_backend/: Cargo.toml  marketplace_backend.did
src/marketplace_backend/src/: common.rs  factory.rs  lib.rs  memory.rs  query_methods.rs  update_methods.rs
src/marketplace_backend/src/common/: guards.rs  structures.rs
src/marketplace_frontend/: index.html  package.json
src/marketplace_frontend/src/: App.tsx
src/marketplace_frontend/src/lib/: utils.ts
wasm_files/: icrc7.wasm
