[package]
name = "icrc7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.1"
icrc-ledger-types = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }
crc32fast = "1.3" 
sha2 = "0.10"
hex = "0.4"
ic-cdk-macros = "0.8.0"
ciborium = "0.2.1"
